--- a/quizz-app/package.json
+++ b/quizz-app/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
-    "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "19.2.0"
   },
@@ -24,7 +26,12 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
