--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "socket.io": "^4.8.1"
   }
 }
