--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
-    "socket.io": "^4.8.1"
+    "crypto": "^1.0.1",
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0"
   }
 }
