--- a/quizz-app/package.json
+++ b/quizz-app/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "^19.2.0",
     "react-dom": "19.2.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
