--- a/quizz-app/package.json
+++ b/quizz-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
@@ -18,6 +19,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
+    "geist": "^1.5.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
