--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.10",
     "express": "^5.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
@@ -21,6 +21,9 @@
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
+    "ioredis": "^5.9.2",
+    "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   }
