--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     container_name: Think-Sync-2
     restart: always
     environment:
-      # These variables are used by the Postgres image to initialize the DB
       POSTGRES_USER: quiz-admin-2
       POSTGRES_PASSWORD: mypassword-2
       POSTGRES_DB: quiz-admin-db-2
@@ -14,5 +13,15 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
+
 volumes:
   postgres_data:
+  redis_data:
