chore: update docker-compose configuration and add frontend service
Upgraded Docker Compose version to 3.9 and added backend and frontend services for the application. The backend service is configured to build from the ./Backend directory, while the frontend service builds from ./quizz-app and depends on the backend. Updated README.md to include new screenshots for the frontend application.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,21 @@
-version: '3.8'
+version: '3.9'
+
 services:
+  backend:
+    build: ./Backend
+    container_name: think-sync-backend
+    ports:
+      - "3000:3000"
+
+  frontend:
+    build: ./quizz-app
+    container_name: think-sync-frontend
+    ports:
+      - "8080:3000"
+
+    depends_on:
+      - backend
+
   db:
     image: postgres:15-alpine
     container_name: Think-Sync-2
