--- a/quizz-app/.dockerignore
+++ b/quizz-app/.dockerignore
@@ -1,4 +1,17 @@
 node_modules
-dist
-.git
+.next
+npm-debug.log
 .env
+.env.local
+.env.*.local
+.git
+.gitignore
+*.md
+.DS_Store
+coverage
+.vscode
+.idea
+out
+build
+
+
