--- a/quizz-app/dockerfile
+++ b/quizz-app/dockerfile
@@ -1,23 +1,67 @@
 # Build stage
-FROM node:24-alpine AS build
+FROM node:20-alpine AS build
+
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
+# Copy package files
+COPY quizz-app/package*.json ./
 
-COPY . .
+# Install dependencies
+RUN npm ci
 
-# 🔥 REQUIRED for Prisma
+# Copy Prisma schema
+COPY quizz-app/prisma ./prisma
+
+# Generate Prisma Client
 RUN npx prisma generate
 
-# Build Next.js
+# Copy the rest of the application
+COPY quizz-app/ ./
+
+# Build Next.js application
 RUN npm run build
 
-# Runtime stage
-FROM node:24-alpine
+# Production stage
+FROM node:20-alpine AS production
+
 WORKDIR /app
 
-COPY --from=build /app ./
+# Copy package files
+COPY quizz-app/package*.json ./
 
+# Install only production dependencies
+RUN npm ci --only=production
+
+# Copy Prisma files and generate client
+COPY quizz-app/prisma ./prisma
+RUN npx prisma generate
+
+# Copy built Next.js app from build stage
+COPY --from=build /app/.next ./.next
+COPY --from=build /app/public ./public
+COPY --from=build /app/next.config.ts ./next.config.ts
+
+# Create a non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001
+
+# Set correct permissions for Next.js cache
+RUN mkdir -p .next/cache && \
+    chown -R nextjs:nodejs /app
+
+# Switch to non-root user
+USER nextjs
+
+# Expose the frontend port
 EXPOSE 3000
-CMD ["npm", "run", "start"]
+
+# Set environment variables
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=40s \
+  CMD node -e "require('http').get('http://localhost:3000', (r) => r.statusCode === 200 ? process.exit(0) : process.exit(1))" || exit 1
+
+# Start Next.js
+CMD ["npm", "start"]
